# knowledge2video

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CURRENT.md  Dockerfile  LICENSE  PROJECT.md  README.md  body.json  docker-compose.yml  pyproject.toml  test.md
prompts/: __init__.py  base_class.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5_eva.py  stage5_unlearning.py  user_profile.py
scripts/: resume_real_e2e_case.py  start_worker.bat
src/: agent.py  api_config.example.json  audio_steps.py  cover_scene.py  external_assets.py  gpt_request.py  overview_scene.py  scope_refine.py  start_api.bat  utils.py
src/api/: __init__.py  auth.py  config.py  main.py
src/api/routes/: __init__.py  files.py  health.py  video.py
src/api/schemas/: __init__.py  request.py
src/api/tasks/: __init__.py  celery_app.py  video_tasks.py
src/api/utils/: __init__.py  file_utils.py  sse.py
src/json_files/: long_video_ref_mapping.json  long_video_topics_list.json  long_video_topics_list_safe.json  questions_by_topic_10.json
