[project]
name = "code2video"
version = "1.0.0"
description = "将编程知识点自动转换为教学视频的 API 服务"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Code2Video Team" }
]
keywords = ["video", "education", "manim", "api", "llm"]

dependencies = [
    # ============================================================================
    # Core API and Data Processing
    # ============================================================================
    "openai>=1.90.0",
    "requests>=2.32.4",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",

    # ============================================================================
    # Manim Animation Framework (Core)
    # ============================================================================
    "manim>=0.19.0",
    "ManimPango>=0.6.0",

    # ============================================================================
    # Graphics and Multimedia
    # ============================================================================
    "pillow>=11.2.1",
    "opencv-python>=4.12.0.88",
    "moviepy>=2.2.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "pydub>=0.25.1",

    # ============================================================================
    # 3D Graphics and Rendering (Manim dependencies)
    # ============================================================================
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "glcontext>=3.0.0",
    "pyglet>=2.1.6",
    "PyOpenGL>=3.1.9",
    "pycairo>=1.28.0",
    "skia-pathops>=0.8.0.post2",
    "svgelements>=1.9.6",
    "mapbox_earcut>=1.0.3",
    "isosurfaces>=0.1.2",

    # ============================================================================
    # CLI and Terminal Utilities
    # ============================================================================
    "click>=8.2.1",
    "cloup>=3.0.7",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",

    # ============================================================================
    # Mathematical and Scientific Computing
    # ============================================================================
    "networkx>=3.5",
    "sympy>=1.14.0",
    "mpmath>=1.3.0",

    # ============================================================================
    # Data Parsing and Serialization
    # ============================================================================
    "beautifulsoup4>=4.13.4",
    "PyYAML>=6.0.2",
    "regex>=2025.7.34",

    # ============================================================================
    # HTTP and Networking
    # ============================================================================
    "certifi>=2025.6.15",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "urllib3>=2.5.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "anyio>=4.9.0",
    "sniffio>=1.3.1",

    # ============================================================================
    # API Client Dependencies
    # ============================================================================
    "google-genai>=1.32.0",
    "google-auth>=2.40.3",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "annotated-types>=0.7.0",
    "typing_extensions>=4.14.0",
    "jiter>=0.10.0",
    "pyasn1>=0.6.1",
    "pyasn1_modules>=0.4.2",
    "rsa>=4.9.1",
    "cachetools>=5.5.2",

    # ============================================================================
    # Template and Markup Processing
    # ============================================================================
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "Pygments>=2.19.1",

    # ============================================================================
    # Utility Libraries
    # ============================================================================
    "decorator>=5.2.1",
    "packaging>=25.0",

    # ============================================================================
    # Web Framework (API Service)
    # ============================================================================
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",

    # ============================================================================
    # Task Queue
    # ============================================================================
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
code2video-api = "src.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "prompts"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
# UV 配置

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
